fix overflow on intro mobile screen

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -10809,7 +10809,7 @@ html {
   font-family: "Poppins", sans-serif;
   white-space: nowrap;
   overflow: hidden;
-  font-size: 3rem;
+  font-size: 2rem;
 }
 @media (min-width: 992px) {
   .display-2--intro {
@@ -10868,6 +10868,11 @@ html {
   .display-3--title {
     font-size: 1.8rem;
   }
+}
+
+.display-4 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
 }
 
 .border-right {
@@ -10959,7 +10964,7 @@ html {
 .testimonials__card {
   background-color: rgba(255, 255, 255, 0.8);
   padding: 1.3rem 1.25rem;
-  margin: 2rem 0rem;
+  margin: 2.3rem 0rem;
   border-radius: 0.625rem;
   height: auto;
   text-align: center;
