--- a/scss/sections/_testimonials.scss
+++ b/scss/sections/_testimonials.scss
@@ -9,7 +9,7 @@
     &__card {
         background-color: rgba($white, 0.8);
         padding: 1.3rem 1.25rem;
-        margin: 2rem 0rem;
+        margin: 2.3rem 0rem;
         border-radius: 0.625rem;
         height: auto;
         text-align: center;
